[package]
name = "sokoban"
version = "0.1.0"
authors = ["Syn-Nine <contact@syn-nine.com>"]
edition = "2021"
license-file = "LICENSE-MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glutin = "0.26.0"
takeable-option = "0.5"
rand = "0.8.3"
image = "0.23.14"
cgmath = "0.18.0"
xml-rs = "0.8.4"

[build-dependencies]
gl_generator = "0.14"